# Quantization_vLLM

./: .dockerignore  .env.example  .gitignore  Dockerfile  SETUP.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  runpod_connect.py
quantize/: __init__.py  aqlm.py  awq.py  base.py  bnb.py  fp8.py  gptq.py  int8_w8a8.py  squeezellm.py
serve/: vllm_server.py
